src/css/Button.css
.button {
  display: inline-block;
  margin-right: 10px;
  padding: 10px 20px;
  height: 20px;
  border: none;
  border-radius: 5px;
  outline: none;
  background-color: rgba(0, 0, 0, 0.1);
  font-family: "Lato", sans-serif;
  font-size: 11pt;
  cursor: pointer;
  z-index: 1;
  text-align: center;
}

.button:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

.theme-dark .button {
  background-color: rgba(255, 255, 255, 0.3);
}

.theme-dark .button:hover {
  background-color: rgba(255, 255, 255, 0.4);
}

.button.destructive {
  background-color: rgba(255, 0, 0, 0.5);
  color: white;
}

.button.destructive:hover {
  background-color: rgba(255, 0, 0, 0.75);
}

.button.primary {
  background-color: rgba(42, 77, 163, 0.75);
  color: white;
}

.button.primary:hover {
  background-color: rgba(42, 77, 163, 0.9);
}

